[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rsvmd"
version = "0.1.0"
description = "Recursive Sliding Variational Mode Decomposition (RSVMD & PO-RSVMD)"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "scipy>=1.10"]

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "rsvmd._rsvmd"
